WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
139336
A selector should not match anything if there is a subselector after a non-scrollbar pseudo element
https://bugs.webkit.org/show_bug.cgi?id=139336
Summary
A selector should not match anything if there is a subselector after a non-sc...
Benjamin Poulain
Reported
2014-12-05 21:49:23 PST
A selector should not match anything if there is a subselector after a non-scrollbar pseudo element
Attachments
Patch
(10.62 KB, patch)
2014-12-05 21:57 PST
,
Benjamin Poulain
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Benjamin Poulain
Comment 1
2014-12-05 21:57:29 PST
Created
attachment 242703
[details]
Patch
Andreas Kling
Comment 2
2014-12-08 14:51:36 PST
Comment on
attachment 242703
[details]
Patch r=me
Benjamin Poulain
Comment 3
2014-12-08 15:55:42 PST
Comment on
attachment 242703
[details]
Patch Clearing flags on attachment: 242703 Committed
r176984
: <
http://trac.webkit.org/changeset/176984
>
Benjamin Poulain
Comment 4
2014-12-08 15:55:48 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug